add admin assing function add get total user with query change swagger
